yml 스크립트 수정

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -30,10 +30,10 @@ jobs:
 
     - name: Slack Notification
       if: always()
-      uses: slackapi/slack-github-action@v1.27.0
+      uses: 8398a7/action-slack@v3
       with:
         status: ${{ job.status }}
-        fields: repo,message,commit,author,action,eventName,ref,workflow,job,took,pullRequest
+        fields: workflow,job,commit,repo,author,took,ref
+        author_name: OhJongSeok
       env:
-        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-        SLACK_CHANNEL_ID: ${{ secrets.SLACK_CHANNEL_ID }}
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
