--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,9 +24,8 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
-
-    - name: Print Hello DataUniverse
-      run: echo "Hello DataUniverse-!"
+    - name: Run detekt
+      run: ./gradlew detekt
 
     - name: Slack Notification
       if: always()
