--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,6 +22,10 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+    - name: Create local.properties
+      run: | 
+        echo "sdk.dir=$ANDROID_HOME" > local.properties
+
     - name: Build with Gradle
       run: ./gradlew build
 #    - name: Run detekt
