--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,8 +20,8 @@ jobs:
         distribution: 'temurin'
 #        cache: gradle
 
-#    - name: Grant execute permission for gradlew
-#      run: chmod +x gradlew
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
     - name: Create local.properties
       run: | 
         echo "sdk.dir=C:\\Users\\DU\\AppData\\Local\\Android\\sdk" > local.properties
